apps/base/angular/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-angular
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: loginapp.rancher.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-app-angular
            port:
              number: 80
